# google-deepmind-hackathon

./: .env.example  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  conftest.py  dev_tokens.json  dev_tokens_test.json  docker-compose.yml  pyproject.toml
.claude/commands/: code-review.md
benchmarks/: README.md  RUN_GUIDE.md  __init__.py  __main__.py  conftest.py  docker-compose.bench.yml  download_datasets.py  models.py
benchmarks/adapters/: __init__.py  base.py  neocortex_adapter.py
benchmarks/benchmarks/: longmemeval.py
benchmarks/judges/: __init__.py  f1_judge.py  llm_judge.py
benchmarks/reports/: generator.py
benchmarks/runners/: checkpoint.py  pipeline.py
benchmarks/tests/: __init__.py  test_judges.py  test_longmemeval.py  test_neocortex_adapter.py  test_pipeline_cli.py  test_pipeline_runner.py
data/: pydantic_agents_playground.sqlite
demo-data/: e2e-memory-test-report.md  e2e-revalidation-report.md
docker/ingestion/: Dockerfile
docker/mcp/: Dockerfile
docs/: agent-architecture-chat.html  agent-architecture-research.html  agent-architecture.html  architecture.md  configuration.md  development.md  e2e-reproduction.md  how-it-works.md  multi-agent.md  test-agents.md
docs/plans/: 00-pydantic-ai-bmw-ontology-demo.md  01-high-level-hackathon-plan.md  02-postgres-storage-layer.md  03-mcp-server-scaffold.md  04-multi-graph-schemas.md  05-ingestion-api.md  06-embeddings-hybrid-recall-tui.md  07-extraction-pipeline-integration.md  07-research-agent-decomposition.md  08-cognitive-heuristics.md  08-memory-agents.md  08-permission-schemas.md  09-graph-visualizer.md  10-multimodal-media-ingestion.md  11-upper-ontology-routing.md  12-auth0-integration.md  12-manual-e2e-test.md  13-discovery-redesign-and-fixes.md  14-demo-data-ingestion.md
docs/presentation/: compile-pptx.js  index.md  package.json
scripts/: cleanup_ontology.py  demo_e2e.sh  e2e_auth0_test.py  e2e_cognitive_recall_test.py  e2e_content_update_test.py  e2e_embedding_test.py  e2e_episodic_memory_test.py  e2e_extraction_pipeline_test.py  e2e_hybrid_recall_test.py  e2e_ingestion_test.py  e2e_mcp_test.py  e2e_media.sh  e2e_media_ingestion_test.py  e2e_permission_test.py  e2e_plan15_scenarios_test.py  e2e_plan17_validation.py  e2e_smoke_test.py  e2e_weight_stability_test.py  launch.sh  manage.sh  run_e2e.sh  run_e2e_auth0.sh  run_e2e_ingestion.sh  run_e2e_mcp.sh  taxonomy_steward.sh
src/: main.py
test_agents/: .env.example  build_agents.py  run.py  setup.sh  test_memory.sh
tests/: conftest.py  test_agents.py  test_auth0_config.py  test_cognitive_e2e.py  test_content_update.py  test_database.py  test_dev_token_auth.py  test_domain_classifier.py  test_domain_e2e.py  test_domain_models.py  test_domain_router.py  test_e2e_extraction.py  test_embedding_service.py  test_episode_session.py  test_extraction_pipeline.py  test_graph_data.py  test_graph_ontology.py  test_graph_router.py  test_graph_search.py  test_ingestion_api.py  test_ingestion_models.py  test_jobs.py  test_librarian_mutation_tools.py  test_librarian_retrieval_tools.py  test_media_compressor.py  test_media_description.py  test_media_ingestion.py  test_media_store.py  test_migration_runner.py  test_multi_graph_adapter.py  test_pipeline.py  test_postgres_service.py  test_protocol_graph_mutations.py  test_recall_graph_traversal.py  test_recall_session_output.py  test_remember_extraction.py  test_schema_manager.py  test_schemas.py  test_scoped_connections.py  test_scoring.py  (+6 more)
(+428 files in other folders)
