[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "google-deepmind-hackathon"
version = "0.1.0"
description = "Google DeepMind x AI Tinkerers Hackathon - Warsaw 2026"
requires-python = ">=3.13"
dependencies = [
    "pydantic-ai-slim[google]>=1.72.0",
    "loguru>=0.7.3",
    "asyncpg>=0.30.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[dependency-groups]
dev = [
    "ty",
    "ruff",
    "pre-commit",
    "black",
    "flake8",
    "pytest",
    "pytest-asyncio",
]

[tool.black]
line-length = 120
target-version = ["py313"]

[tool.poetry]
packages = [{include = "pydantic_agents_playground", from = "src"}]

[tool.poetry.group.dev.dependencies]
black = "*"
flake8 = "*"
pre-commit = "*"
pytest = "*"
ruff = "*"
ty = "*"

[tool.ruff]
line-length = 120
target-version = "py313"
src = ["src"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]

[tool.ty.environment]
root = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
